--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -27,12 +29,16 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.0.1",
+    "@testing-library/user-event": "^14.1.0",
     "@types/node": "17.0.23",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
     "@types/react-redux": "^7.1.23",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
+    "jest": "^27.5.1",
     "typescript": "4.6.3"
   }
 }
